--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4" ></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <title>OptimusTech</title>
 </head>
@@ -42,6 +43,34 @@
                 Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.
             </p>
         </div>
+    </section>
+
+    <section id="metricas">
+        
+            <div class="container--item">
+                <h3>400+</h3>
+                <h2>Projetos concluídos</h2>
+                <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </div>
+
+            <div class="container--item">
+                <h3>100+</h3>
+                <h2>Colaboradores</h2>
+                <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+            </div>
+
+            <div class="container--item">
+                <h3>20K</h3>
+                <h2>Downloads</h2>
+                <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            </div>
+
+            <div class="container--item">
+                <h3>500+</h3>
+                <h2>Reviews 5 estrelas</h2>
+                <p>Estamos orgulhosos de contar com mais de 500 rewiews 5 estrelas em nossos produtos.</p>
+            </div>
+
     </section>
 
 
