--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="https://cdn.jsdelivr.net/npm/less@4" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <title>OptimusTech</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -26,11 +28,11 @@
                         <li><a href="#">Recursos</a></li>
                         <li><a href="#sobre">Sobre nós</a></li>
                     </ul>
-                </nav> 
-            </div>
-            <div class="container--buttom">
-                <button class="buttom--entrar">Entrar</button>
-                <button class="buttom--cadastrar">Cadastrar</button>
+                </nav>
+                <div class="container--buttom">
+                    <button class="buttom--entrar">Entrar</button>
+                    <button class="buttom--cadastrar">Cadastrar</button>
+                </div>
             </div>
         </div>
     </header>
@@ -40,44 +42,45 @@
             <h5>Sobre nós</h5>
             <h1>Por que somos diferentes?</h1>
             <p>
-                Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.
+                Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se
+                concentrarem naquilo que é realmente importante para elas.
             </p>
         </div>
     </section>
 
     <section id="metricas">
-        
-            <div class="container--item">
-                <h3>400+</h3>
-                <h2>Projetos concluídos</h2>
-                <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
-            </div>
 
-            <div class="container--item">
-                <h3>100+</h3>
-                <h2>Colaboradores</h2>
-                <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
-            </div>
+        <div class="container--item">
+            <h3>400+</h3>
+            <h2>Projetos concluídos</h2>
+            <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
 
-            <div class="container--item">
-                <h3>20K</h3>
-                <h2>Downloads</h2>
-                <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
-            </div>
+        <div class="container--item">
+            <h3>100+</h3>
+            <h2>Colaboradores</h2>
+            <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
 
-            <div class="container--item">
-                <h3>500+</h3>
-                <h2>Reviews 5 estrelas</h2>
-                <p>Estamos orgulhosos de contar com mais de 500 rewiews 5 estrelas em nossos produtos.</p>
-            </div>
+        <div class="container--item">
+            <h3>20K</h3>
+            <h2>Downloads</h2>
+            <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+
+        <div class="container--item">
+            <h3>500+</h3>
+            <h2>Reviews 5 estrelas</h2>
+            <p>Estamos orgulhosos de contar com mais de 500 rewiews 5 estrelas em nossos produtos.</p>
+        </div>
 
     </section>
-
 
     <script src="index.js"></script>
 
     <script>
         feather.replace()
-      </script>
+    </script>
 </body>
+
 </html>
