--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <section id="sobre">
+    <section id="about">
         <div class="container--content--header">
             <h5>Sobre nós</h5>
             <h1>Por que somos diferentes?</h1>
@@ -48,9 +48,9 @@
         </div>
     </section>
 
-    <section id="metricas">
+    <section id="metrics">
 
-        <div class="container--item">
+        <div class="container--item ml--0">
             <h3>400+</h3>
             <h2>Projetos concluídos</h2>
             <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
@@ -68,13 +68,114 @@
             <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
         </div>
 
-        <div class="container--item">
+        <div class="container--item mr--0">
             <h3>500+</h3>
             <h2>Reviews 5 estrelas</h2>
             <p>Estamos orgulhosos de contar com mais de 500 rewiews 5 estrelas em nossos produtos.</p>
         </div>
 
     </section>
+
+    <section id="vacancy">
+        <div class="talents">
+            <h5>Vagas abertas!</h5>
+            <h2>Estamos procurando por talentos</h2>
+            <p>Somos uma equipe 100% remota como pessoas do Brasil inteiro.</p>
+            <img src="img/Image.png" alt="Nossa equipe">
+        </div>
+
+        <div class="jobs--open">
+            <div class="container">
+                <div class="content">
+                    <h3>Design</h3>
+                    <div class="item">
+                        <h3>Product Designer</h3>
+                        <div class="content--item">
+                            <p>Full-time</p>
+                        </div>
+                        <div class="content--item">
+                            <p>Faixa salarial: R$ 7.000</p>
+                        </div>
+
+                    </div>
+
+                    <div class="item">
+                        <h3>UX Designer</h3>
+                        <div class="content--item">
+                            <p>Full-time</p>
+                        </div>
+                        <div class="content--item">
+                            <p>Faixa salarial: R$ 6.000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <h3>Desenvolvimento de software</h3>
+                    <div class="item">
+                        <h3>Desenvolvedor(a) iOS</h3>
+                        <div class="content--item">
+                            <p>Full-time</p>
+                        </div>
+                        <div class="content--item">
+                            <p>Faixa salarial: R$ 8.000</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3>Desenvolvedor(a) Front-end</h3>
+                        <div class="content--item">
+                            <p>Full-time</p>
+                        </div>
+                        <div class="content--item">
+                            <p>Faixa salarial: R$ 7.000</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3>Desenvovledor(a) Back-end</h3>
+                        <div class="content--item">
+                            <p>Full-time</p>
+                        </div>
+                        <div class="content--item">
+                            <p>Faixa salarial: R$ 8.000</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="testemonial">
+        <div class="container">
+            <div class="content">
+                <h5>Veja o que nossos colaboradores falam de nós</h5>
+                <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de
+                    auxílio possível.</h2>
+                <div class="content--atribution">
+                    <img src="img/Avatar.png" alt="Woman">
+                    <h3>Júlia Castro</h3>
+                    <p>Desenvolvedora web</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="content">
+                <h2>Acompanhe nossas oportunidades</h2>
+                <p>Seja o promeiro a saber quando novas vagas serão abertas!</p>
+                <form action="">
+                    <input type="email" placeholder="Seu e-mail">
+                    <button type="submit" >Cadastrar</button>
+                </form>
+            </div>
+
+            <span>&copy; OptimusTech. Todos os direitos reservados.</span>
+        </div>
+    </footer>
 
     <script src="index.js"></script>
 
