--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div id="menu" onclick="mostraMenu()" class="container--menu--responsive">
                     <i data-feather="align-justify"></i>
                 </div>
-                <nav>
-                    <ul id="lateral--menu">
+                <nav  id="lateral--menu">
+                    <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">Produtos</a></li>
                         <li><a href="#">Recursos</a></li>
